--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,7 +13,7 @@
     <title>Convert Money</title>
   </head>
   <body>
-    <img src="./assets/logo.gif" alt="logo-convert-money" />
+    <img class="logo" src="./assets/logo.gif" alt="logo-convert-money" />
 
     <main>
       <label>
@@ -38,20 +39,21 @@
       <button>Converter</button>
 
       <section>
-        <div>
+        <div class="currency-box">
           <img src="./assets/real.png" alt="moeda-a-converter">
-          <p>Real</p>
-          <p>R$ 0,00</p>
+          <p class="currency">Real</p>
+          <p class="currency-value">R$ 0,00</p>
         </div>
 
-        <img src="./assets/arrow.png" alt="seta">
+        <img class="arrow-img" src="./assets/arrow.png" alt="seta">
 
-        <div>
+        <div class="currency-box">
           <img src="./assets/dolar.png" alt="moeda-convertida">
-          <p>Dólar</p>
-          <p>US$ 0.0</p>
+          <p class="currency">Dólar</p>
+          <p class="currency-value">US$ 0.0</p>
         </div>
       </section>
     </main>
+
   </body>
 </html>
