--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -25,35 +25,36 @@
 
       <label>
         Converter <b>para</b>
-        <select>
-          <option>US$ Dólar americano</option>
-          <option>€ Euro</option>
+        <select class="currency-select">
+          <option value="dolar">US$ Dólar americano</option>
+          <option value="euro">€ Euro</option>
         </select>
       </label>
 
       <label>
         Valor
-        <input placeholder="R$ 10.000,00">
+        <input class="input-currency" placeholder="R$ 10.000,00" />
       </label>
 
-      <button>Converter</button>
+      <button class="convert-button">Converter</button>
 
       <section>
         <div class="currency-box">
-          <img src="./assets/real.png" alt="moeda-a-converter">
+          <img src="./assets/real.png" alt="moeda-a-converter" />
           <p class="currency">Real</p>
-          <p class="currency-value">R$ 0,00</p>
+          <p class="currency-value-to-convert">R$ 0,00</p>
         </div>
 
-        <img class="arrow-img" src="./assets/arrow.png" alt="seta">
+        <img class="arrow-img" src="./assets/arrow.png" alt="seta" />
 
         <div class="currency-box">
-          <img src="./assets/dolar.png" alt="moeda-convertida">
-          <p class="currency">Dólar</p>
+          <img class="currency-img" src="./assets/dolar.png" alt="moeda-convertida" />
+          <p class="currency" id="currency-name">Dólar americano</p>
           <p class="currency-value">US$ 0.0</p>
         </div>
       </section>
     </main>
 
   </body>
+  <script src="./scripts.js"></script>
 </html>
