--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
         <select class="currency-select">
           <option value="dolar">US$ Dólar americano</option>
           <option value="euro">€ Euro</option>
+          <option value="euro">£ Libra</option>
+          <option value="euro">₿ Bitcoin</option>
         </select>
       </label>
 
       <label>
         Valor
-        <input class="input-currency" placeholder="R$ 10.000,00" />
+        <input class="input-currency" placeholder="Digite o valor" />
       </label>
 
       <button class="convert-button">Converter</button>
